src/ui/snapshots/gitt__ui__diff__tests__diff_01_list_snapshot.snap
---
source: src/ui/diff.rs
expression: "render_to_string(&s, 80, 12)"
---
 Unstaged   Staged   Working   vs main
M src/reducer.rs
A src/diff.rs
D src/old.rs
R src/old_name.rs → src/new_name.rs






j/k move · ←/→ scope · Tab diff · f wide · Enter actions · R reload · q quit
