src/ui/snapshots/gitt__ui__diff__tests__diff_04_scope_tabs_snapshot.snap
---
source: src/ui/diff.rs
expression: "render_to_string(&s, 80, 12)"
---
 Unstaged   Staged   Working   vs main
M x.rs









j/k move · ←/→ scope · Tab diff · f wide · Enter actions · R reload · q quit
