src/ui/snapshots/gitt__ui__diff__tests__diff_08_menu_snapshot.snap
---
source: src/ui/diff.rs
assertion_line: 266
expression: "render_to_string(&s, 80, 12)"
---
 Unstaged   Staged   Working   vs main
M src/reducer.rs
A src/diff.rs
D src/old.rs
R src/old_name.rs → src/new_na┌ src/reducer.rs ──┐
                              │ Copy path        │
                              │ Copy diff        │
                              └──────────────────┘



j/k move · ←/→ scope · Tab diff · Enter actions · R reload · q quit
