src/ui/snapshots/gitt__ui__diff__tests__diff_11_empty_scope_snapshot.snap
---
source: src/ui/diff.rs
assertion_line: 276
expression: "render_to_string(&s, 80, 8)"
---
 Unstaged   Staged   Working   vs main
no unstaged changes





j/k move · ←/→ scope · Tab diff · Enter actions · R reload · q quit
