src/ui/snapshots/gitt__ui__diff__tests__loading_snapshot.snap
---
source: src/ui/diff.rs
assertion_line: 285
expression: "render_to_string(&s, 80, 8)"
---
 Unstaged   Staged   Working   vs main
Loading…





j/k move · ←/→ scope · Tab diff · Enter actions · R reload · q quit
